// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> should match snapshots 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%), linear-gradient(-29deg,#e0e0e0 50%,#0CC0EA 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {
  .c0 {
    min-width: auto;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 progress"
    >
      <div
        class="c2"
      >
        1 of 6
      </div>
    </div>
    <div
      class="c3"
    >
      <strong
        class="c4"
      >
        Salários / benefícios
      </strong>
      <small
        class="c5"
      >
        next:  Contrato / Local
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Stepper /> should match snapshots 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%), linear-gradient(29deg,#e0e0e0 50%,#0CC0EA 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c0 {
    min-width: auto;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 progress"
    >
      <div
        class="c2"
      >
        2 of 6
      </div>
    </div>
    <div
      class="c3"
    >
      <strong
        class="c4"
      >
        Salários / benefícios
      </strong>
      <small
        class="c5"
      >
        next:  Contrato / Local 
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Stepper /> should match snapshots 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(90deg,#e0e0e0 50%,transparent 50%), linear-gradient(90deg,#e0e0e0 50%,#0CC0EA 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c0 {
    min-width: auto;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 progress"
    >
      <div
        class="c2"
      >
        3 of 6
      </div>
    </div>
    <div
      class="c3"
    >
      <strong
        class="c4"
      >
        Salários / benefícios
      </strong>
      <small
        class="c5"
      >
        next:  Contrato / Local 
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Stepper /> should match snapshots 4`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(-90deg,#0CC0EA 50%,transparent 50%), linear-gradient(-29deg,#0CC0EA 50%,#e0e0e0 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c0 {
    min-width: auto;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 progress"
    >
      <div
        class="c2"
      >
        4 of 6
      </div>
    </div>
    <div
      class="c3"
    >
      <strong
        class="c4"
      >
        Salários / benefícios
      </strong>
      <small
        class="c5"
      >
        next:  Contrato / Local 
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Stepper /> should match snapshots 5`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(-90deg,#0CC0EA 50%,transparent 50%), linear-gradient(29deg,#0CC0EA 50%,#e0e0e0 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c0 {
    min-width: auto;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 progress"
    >
      <div
        class="c2"
      >
        5 of 6
      </div>
    </div>
    <div
      class="c3"
    >
      <strong
        class="c4"
      >
        Salários / benefícios
      </strong>
      <small
        class="c5"
      >
        next:  Contrato / Local 
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Stepper /> should match snapshots 6`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 300px;
}

.c0 .progress {
  background-image: linear-gradient(-90deg,#0CC0EA 50%,transparent 50%), linear-gradient(90deg,#0CC0EA 50%,#e0e0e0 50%);
}

.c1 {
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  width: 64px;
  height: 64px;
  font-size: 12px;
}

.c2 {
  background: #ffffff;
  border-radius: 50%;
  margin: auto;
  text-align: center;
  padding-top: 16px;
  width: 52px;
  height: 34px;
}

.c3 {
  margin-left: 16px;
  width: 210px;
  display: inline-block;
}

.c3 strong,
.c3 small {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  display: block;
  height: 26px;
  font-size: 20px;
}

.c5 {
  display: block;
  font-size: 14px;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c0 {
    min-width: auto;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 72px;
    height: 72px;
    font-size: 14px;
  }
}

@media (min-width:1024px) {
  .c2 {
    padding-top: 18px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 60px;
    height: 40px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 300px;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 28px;
    height: 36px;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 16px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 progress"
    >
      <div
        class="c2"
      >
        6 of 6
      </div>
    </div>
    <div
      class="c3"
    >
      <strong
        class="c4"
      >
        Salários / benefícios
      </strong>
      <small
        class="c5"
      >
         Contrato / Local 
      </small>
    </div>
  </div>
</DocumentFragment>
`;
